Bug 1263951 - Avoid trying to initialize new GMP instances once the browser enters shutdown. r=cpearce a=lizzard

MozReview-Commit-ID: G6ND2LyT0tp